--- a/app/assets/stylesheets/friends/friends.scss
+++ b/app/assets/stylesheets/friends/friends.scss
@@ -68,7 +68,7 @@
 }
 
 .friend-index-item-wrapper {
-  margin: 0px 50px 0px 20px;
+  margin: 0px 30px 0px 20px;
   padding: 0px 10px;
   &:hover {
     background: $background-hover;
