--- a/app/assets/stylesheets/server/server_index.scss
+++ b/app/assets/stylesheets/server/server_index.scss
@@ -20,7 +20,8 @@
   color: $off-white;
   padding-top: 12px;
 
-  overflow: visible, scroll;
+  overflow: visible auto;
+  scrollbar-width: none;
 
   &::-webkit-scrollbar {
     display: none;
